refactor!: move JDBC API to io.github.idoly namespace
Require JDK 25 and JDBC 4.3, hide the inherited JDBC3 implementation layer, and replace active documentation with concise Chinese guidance.